fixed post item overflow size

--- a/src/components/PostCard/PostCard.css
+++ b/src/components/PostCard/PostCard.css
@@ -1,4 +1,3 @@
-
 .detail-container {
     width: 50vw;
     margin-top: 1vw;
@@ -31,8 +30,8 @@
 .author {
     padding-right: 10px;
     display: flex;
-justify-content: center;
-align-items: center;
+    justify-content: center;
+    align-items: center;
 }
 
 .card-post-creator {
@@ -95,11 +94,13 @@ align-items: center;
 .time {
     border-left: solid 1px black;
     padding-left: 1vw;
-display: flex;
-justify-content: center;
-align-items: center;
+    padding-right: .5vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
-@media screen and (max-width: 900px){
+
+@media screen and (max-width: 900px) {
     .detail-container {
         width: 48.8vw;
         /* margin-top: 2vw;
